--- a/package.json
+++ b/package.json
@@ -1,25 +1,23 @@
 {
-  "name": "tg",
+  "name": "hacker-game",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/node": "^22.10.2",
-    "axios": "^1.7.9",
-    "pinia": "^2.3.0",
-    "sass": "^1.83.0",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "pinia": "^2.1.0",
+    "vue": "^3.5.0",
+    "sass": "^1.70.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.2.1",
-    "typescript": "~5.6.2",
-    "vite": "^6.0.1",
-    "vue-tsc": "^2.1.10"
+    "@vitejs/plugin-vue": "^5.0.0",
+    "typescript": "^5.2.0",
+    "vite": "^5.0.0",
+    "vue-tsc": "^1.8.0",
+    "@types/node": "^20.0.0"
   }
 }
