--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "pinia": "^2.1.0",
-    "vue": "^3.5.0",
-    "sass": "^1.70.0"
+    "vue": "^3.3.4",
+    "pinia": "^2.1.7",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.0.0",
-    "typescript": "^5.2.0",
-    "vite": "^5.0.0",
-    "vue-tsc": "^1.8.0",
-    "@types/node": "^20.0.0"
+    "@types/node": "^18.14.0",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0",
+    "vue-tsc": "^2.0.6"
   }
 }
