--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.3.4",
     "pinia": "^2.1.7",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "vue": "^3.3.4"
   },
   "devDependencies": {
     "@types/node": "^18.14.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
+    "vite-plugin-static-copy": "^2.2.0",
     "vue-tsc": "^2.0.6"
   }
 }
