--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "echarts": "^5.5.1",
     "pinia": "^2.1.7",
     "sass": "^1.69.5",
     "vue": "^3.3.4"
