--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "electron:dev": "node electron/dev-server.cjs",
     "electron:build": "vite build && electron-builder",
     "electron:preview": "cross-env NODE_ENV=production electron .",
-    "build:mac": "vite build && electron-builder --mac --universal",
-    "build:mac-intel": "vite build && electron-builder --mac --x64",
-    "build:mac-arm": "vite build && electron-builder --mac --arm64",
+    "build:mac": "vite build --mode production && electron-builder --mac --universal",
+    "build:mac-intel": "vite build --mode production && electron-builder --mac --x64",
+    "build:mac-arm": "vite build --mode production && electron-builder --mac --arm64",
     "build:win": "vite build && electron-builder --win --config electron-builder.config.js",
     "build:win-portable": "vite build && electron-builder --win portable --config electron-builder.config.js",
     "build:win-zip": "vite build && electron-builder --win zip --config electron-builder.config.js"
@@ -24,11 +24,13 @@
     "vue": "^3.3.4"
   },
   "devDependencies": {
+    "@rollup/plugin-terser": "^0.4.4",
     "@types/node": "^18.14.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "cross-env": "^7.0.3",
     "electron": "^33.2.1",
     "electron-builder": "^25.1.8",
+    "terser": "^5.37.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-static-copy": "^2.2.0",
@@ -46,11 +48,17 @@
       "target": [
         {
           "target": "dmg",
-          "arch": ["x64", "arm64"]
+          "arch": [
+            "x64",
+            "arm64"
+          ]
         },
         {
           "target": "zip",
-          "arch": ["x64", "arm64"]
+          "arch": [
+            "x64",
+            "arm64"
+          ]
         }
       ],
       "icon": "public/icon.icns",
@@ -64,11 +72,15 @@
       "target": [
         {
           "target": "portable",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         },
         {
           "target": "zip",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         }
       ],
       "icon": "public/icon.ico",
