--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hacker-game",
+  "name": "the-last-track",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
