--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # 版本信息
-VITE_APP_VERSION=1.0.2
-VITE_APP_COPYRIGHT='© 2024 Old Flood. All rights reserved.'
+VITE_APP_VERSION=1.0.9
+VITE_APP_COPYRIGHT='©2024-2040 The Last Crack by Old Flood. All rights reserved.'
 VITE_APP_SERIAL=TLC-2024-0101-0001
 
 # 游戏配置
